@@ -305,8 +305,11 @@ static SHORT amg_setup_smoothP_smoothR (AMG_data *mgl,
         case SOLVER_UMFPACK: {
             // Need to sort the matrix A for UMFPACK to work
             dCSRmat Ac_tran;
-            fasp_dcsr_trans(&mgl[lvl].A, &Ac_tran);
-            fasp_dcsr_sort(&Ac_tran);
+            Ac_tran = fasp_dcsr_create(mgl[lvl].A.row, mgl[lvl].A.col, mgl[lvl].A.nnz);
+            fasp_dcsr_transz(mgl[lvl].A, NULL, &Ac_tran);
+            // It is equivalent to do transpose and then sort
+            //     fasp_dcsr_trans(&mgl[lvl].A, &Ac_tran);
+            //     fasp_dcsr_sort(&Ac_tran);
             fasp_dcsr_cp(&Ac_tran, &mgl[lvl].A);
             fasp_dcsr_free(&Ac_tran);
             mgl[lvl].Numeric = fasp_umfpack_factorize(&mgl[lvl].A, 0);
@@ -540,8 +543,11 @@ static SHORT amg_setup_smoothP_unsmoothR (AMG_data *mgl,
         case SOLVER_UMFPACK: {
             // Need to sort the matrix A for UMFPACK to work
             dCSRmat Ac_tran;
-            fasp_dcsr_trans(&mgl[lvl].A, &Ac_tran);
-            fasp_dcsr_sort(&Ac_tran);
+            Ac_tran = fasp_dcsr_create(mgl[lvl].A.row, mgl[lvl].A.col, mgl[lvl].A.nnz);
+            fasp_dcsr_transz(mgl[lvl].A, NULL, &Ac_tran);
+            // It is equivalent to do transpose and then sort
+            //     fasp_dcsr_trans(&mgl[lvl].A, &Ac_tran);
+            //     fasp_dcsr_sort(&Ac_tran);
             fasp_dcsr_cp(&Ac_tran, &mgl[lvl].A);
             fasp_dcsr_free(&Ac_tran);
             mgl[lvl].Numeric = fasp_umfpack_factorize(&mgl[lvl].A, 5);
