@@ -1,9 +1,11 @@
 File Name: CHANGES
 
-09/14/2015 FASP 1.7.9:
+09/15/2015 FASP 1.7.9:
 - Add new version of transpose, permutation, and sort for dCSRmat.
 - Update paramters for SA AMG.
 - Update regression results after changing SA parameters.
+- Replace trans and sort by transz in UMFPACK and test.
+- Fix and update some parameters in ini.
 
 09/09/2015 FASP 1.7.8:
 - Remove factor.f from the repo.
